@@ -32,5 +32,6 @@ pyfll-installer (001-1) unstable; urgency=low
   * add hd devices to comboBox_installplace again 
   * Timezone button ready now 
   * Timezone bugfix 
+  * callback test from tableWidget checkboxes 
 
- -- Horst Tritremmel <hjt@sidux.com>  Mon, 28 Apr 2008 15:02:44 +0200
+ -- Horst Tritremmel <hjt@sidux.com>  Tue, 29 Apr 2008 16:08:45 +0200
